--- a/public/failure.html
+++ b/public/failure.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Payment Failed</title>
     <style>
-        body { font-family: sans-serif; text-align: center; padding-top: 50px; background-color: #fef2f2; color: #991b1b; }
-        .container { background: white; display: inline-block; padding: 40px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        h1 { margin-bottom: 10px; }
-        a { color: #4F46E5; text-decoration: none; }
+        body { font-family: sans-serif; text-align: center; padding-top: 50px; background: #fef2f2; color: #991b1b; }
+        .box { background: white; display: inline-block; padding: 40px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="box">
         <h1>❌ Payment Failed</h1>
-        <p>Something went wrong or the payment was cancelled.</p>
-        <br>
+        <p>The transaction could not be completed.</p>
         <a href="/">Try Again</a>
     </div>
 </body>
