--- a/public/success.html
+++ b/public/success.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Payment Successful</title>
+    <title>Payment Success</title>
     <style>
-        body { font-family: sans-serif; text-align: center; padding-top: 50px; background-color: #ecfdf5; color: #065f46; }
-        .container { background: white; display: inline-block; padding: 40px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        h1 { margin-bottom: 10px; }
-        a { color: #4F46E5; text-decoration: none; }
+        body { font-family: sans-serif; text-align: center; padding-top: 50px; background: #f0fdf4; color: #166534; }
+        .box { background: white; display: inline-block; padding: 40px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>✅ Payment Successful!</h1>
-        <p>Thank you for your purchase. Your order has been processed.</p>
-        <br>
-        <a href="/">Back to Store</a>
+    <div class="box">
+        <h1>✅ Payment Successful</h1>
+        <p>The invoice has been paid. You can close this window.</p>
+        <a href="/">Go Back</a>
     </div>
 </body>
 </html>
