--- a/public/index.html
+++ b/public/index.html
@@ -3,61 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HesabPay Demo Store</title>
+    <title>Create Invoice</title>
     <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f4f4f9; }
-        .card { background: white; padding: 2rem; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); text-align: center; width: 300px; }
-        .product-img { width: 100px; height: 100px; background: #ddd; margin: 0 auto 1rem; border-radius: 50%; }
-        button { background: #4F46E5; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; width: 100%; }
-        button:hover { background: #4338ca; }
-        button:disabled { background: #ccc; }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #f4f4f9; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .card { background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); width: 100%; max-width: 400px; }
+        h2 { margin-top: 0; color: #333; }
+        .form-group { margin-bottom: 1rem; }
+        label { display: block; margin-bottom: 0.5rem; color: #666; font-size: 0.9rem; }
+        input { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; font-size: 1rem; }
+        button { width: 100%; background: #2563eb; color: white; border: none; padding: 12px; border-radius: 6px; font-size: 1rem; cursor: pointer; transition: background 0.2s; }
+        button:hover { background: #1d4ed8; }
+        .currency-input { position: relative; }
+        .currency-symbol { position: absolute; right: 10px; top: 10px; color: #888; }
     </style>
 </head>
 <body>
 
-    <div class="card">
-        <div class="product-img"></div>
-        <h2>Premium Plan</h2>
-        <p class="price">$45.00</p>
-        <button id="payBtn" onclick="initiatePayment()">Pay with HesabPay</button>
-        <p id="status" style="margin-top:10px; font-size: 0.9em; color: #666;"></p>
-    </div>
+<div class="card">
+    <h2>Send Invoice</h2>
+    <form id="invoiceForm">
+        <div class="form-group">
+            <label>Work Description</label>
+            <input type="text" id="desc" placeholder="e.g. Website Maintenance" required>
+        </div>
+        
+        <div class="form-group">
+            <label>Amount (Afghani)</label>
+            <div class="currency-input">
+                <input type="number" id="amount" placeholder="1500" required>
+                <span class="currency-symbol">AFN</span>
+            </div>
+        </div>
 
-    <script>
-        async function initiatePayment() {
-            const btn = document.getElementById('payBtn');
-            const status = document.getElementById('status');
-            
-            btn.disabled = true;
-            btn.innerText = "Processing...";
-            status.innerText = "Creating payment session...";
+        <button type="submit" id="btn">Generate Payment Link</button>
+    </form>
+</div>
 
-            try {
-                const response = await fetch('/payments/create', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        items: [{ id: "item1", name: "Premium Plan", price: 45 }]
-                    })
-                });
+<script>
+    document.getElementById('invoiceForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const btn = document.getElementById('btn');
+        btn.innerText = "Generating...";
+        btn.disabled = true;
 
-                const data = await response.json();
+        const desc = document.getElementById('desc').value;
+        const amount = document.getElementById('amount').value;
 
-                if (data.success && data.payment_url) {
-                    status.innerText = "Redirecting to HesabPay...";
-                    // Redirect the browser to HesabPay
-                    window.location.href = data.payment_url;
-                } else {
-                    status.innerText = "Error creating session.";
-                    btn.disabled = false;
-                    btn.innerText = "Pay with HesabPay";
-                }
-            } catch (error) {
-                console.error(error);
-                status.innerText = "Network error occurred.";
+        try {
+            const res = await fetch('/payments/create', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ description: desc, amount: amount })
+            });
+
+            const data = await res.json();
+
+            if (data.success && data.payment_url) {
+                // Redirect user (or boss) to HesabPay
+                window.location.href = data.payment_url;
+            } else {
+                alert("Error: " + (data.message || "Unknown error"));
+                btn.innerText = "Generate Payment Link";
                 btn.disabled = false;
             }
+        } catch (err) {
+            console.error(err);
+            alert("Failed to connect to server");
+            btn.innerText = "Generate Payment Link";
+            btn.disabled = false;
         }
-    </script>
+    });
+</script>
+
 </body>
 </html>
